[gd_scene load_steps=14 format=3 uid="uid://brco302airb4n"]

[ext_resource type="Script" uid="uid://vldbkl2fonj3" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="AudioStream" uid="uid://c7mygy6viqprp" path="res://SFX/computer-processing-sound-effects-short-click-select-01-122134.ogg" id="2_glbon"]
[ext_resource type="FontFile" uid="uid://b2xfwqk1bld4i" path="res://UI/PixelOperator8.ttf" id="3_fu7sn"]
[ext_resource type="Texture2D" uid="uid://ddbq7nkju7b6u" path="res://UI/Screenshot 2025-08-25 134120.png" id="3_glbon"]
[ext_resource type="FontFile" uid="uid://d4k7cee63u7q4" path="res://UI/PixelOperator8-Bold.ttf" id="4_glbon"]

[sub_resource type="Theme" id="Theme_glbon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0, 0.689, 0.94, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0352941, 0.0352941, 0.0352941, 0.545098)
border_blend = true
shadow_color = Color(0.189001, 0.402599, 0.444194, 0.858824)
shadow_size = 12

[sub_resource type="Theme" id="Theme_qe12f"]

[sub_resource type="Theme" id="Theme_jix8l"]

[sub_resource type="Theme" id="Theme_8qtwp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy7ct"]
bg_color = Color(0.389138, 0.440167, 0.86093, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o4t1"]
bg_color = Color(0.128753, 0.256305, 0.403603, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k4wn"]
bg_color = Color(0.125763, 0.25138, 0.396433, 1)

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7vrkn")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_glbon")
volume_db = 24.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1119.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_glbon")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 713.0
offset_top = -9.0
offset_right = 1053.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_glbon")
theme_override_font_sizes/font_size = 40
text = "FREAKY LAB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.929412)
self_modulate = Color(0.784314, 0.945098, 1, 0.470588)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 740.0
offset_top = 88.0
offset_right = 1053.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_glbon")
theme_override_styles/panel = SubResource("StyleBoxFlat_nlkkf")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_qe12f")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="main buttons" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_jix8l")
theme_override_constants/separation = 7
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/main buttons"]
layout_mode = 2
theme = SubResource("Theme_8qtwp")
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_dy7ct")
text = "Start"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/main buttons"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0o4t1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0k4wn")
text = "Exit"

[node name="Options button" type="Button" parent="PanelContainer/MarginContainer/main buttons"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0o4t1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0k4wn")
text = " options"

[node name="about" type="Button" parent="PanelContainer/MarginContainer/main buttons"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 26
text = "About"

[connection signal="pressed" from="PanelContainer/MarginContainer/main buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/main buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/main buttons/Options button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/main buttons/about" to="." method="_on_about_pressed"]
